--- a/manuscripts/02.html
+++ b/manuscripts/02.html
@@ -5,6 +5,7 @@
     <title>二　お伽話と本当のお話</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="themes/packages/@vivliostyle/theme-techbook/theme.css">
+    <link rel="stylesheet" type="text/css" href="themes/my-theme.css">
   </head>
   <body>
     <section class="level1" aria-labelledby="二お伽話と本当のお話">
