--- a/manuscripts/06.html
+++ b/manuscripts/06.html
@@ -5,6 +5,7 @@
     <title>六　悧巧な坊さん</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="themes/packages/@vivliostyle/theme-techbook/theme.css">
+    <link rel="stylesheet" type="text/css" href="themes/my-theme.css">
   </head>
   <body>
     <section class="level1" aria-labelledby="六悧巧な坊さん">
