--- a/manuscripts/07.html
+++ b/manuscripts/07.html
@@ -5,6 +5,7 @@
     <title>七　無数の家族</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="themes/packages/@vivliostyle/theme-techbook/theme.css">
+    <link rel="stylesheet" type="text/css" href="themes/my-theme.css">
   </head>
   <body>
     <section class="level1" aria-labelledby="七無数の家族">
