--- a/manuscripts/08.html
+++ b/manuscripts/08.html
@@ -5,6 +5,7 @@
     <title>八　古い梨の木</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="themes/packages/@vivliostyle/theme-techbook/theme.css">
+    <link rel="stylesheet" type="text/css" href="themes/my-theme.css">
   </head>
   <body>
     <section class="level1" aria-labelledby="八古い梨の木">
