--- a/manuscripts/index.html
+++ b/manuscripts/index.html
@@ -5,12 +5,15 @@
     <title>科学の不思議</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="themes/packages/@vivliostyle/theme-techbook/theme.css">
+    <link rel="stylesheet" type="text/css" href="themes/my-theme.css">
   </head>
   <body>
-    <section class="level1" aria-labelledby="科学の不思議">
-      <h1 id="科学の不思議">科学の不思議</h1>
-      <p>アンリイ・ファブル（大杉栄、伊藤野枝訳）</p>
-      <p>© 某サークル, 20xx</p>
+    <section id="title-page">
+      <section class="level1" aria-labelledby="科学の不思議">
+        <h1 id="科学の不思議">科学の不思議</h1>
+        <p>アンリイ・ファブル（大杉栄、伊藤野枝訳）</p>
+        <p>© 某サークル, 20xx</p>
+      </section>
     </section>
   </body>
 </html>
